[FAQ] Fix icons on firefox and ie, fix Y margin. Refs #4272

--- a/assets/Sass/faq.sass
+++ b/assets/Sass/faq.sass
@@ -17,6 +17,8 @@
 
   .faq-block
     border-bottom: 1px $color-text solid
+    margin-bottom: 0.1rem
+    margin-top: 0.2rem
 
   a
     color: $color-logo
